# service-smith

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: bluefolder-fields.md  workflows.md
examples/: custom_map.json  field_map.schema.json  import_profiles.json  import_profiles.schema.json
scripts/: run_import_workflow.sh
service_smith/: __init__.py  bluefolder_client.py  formats.py  importer.py  main.py  profiles.py
service_smith/utils/: __init__.py  config.py  logging.py  reporting.py
templates/: README.md  default_template.csv  vendor_a_template.csv  vendor_b_template.csv
tests/: test_bluefolder_client.py  test_cli.py  test_formats.py  test_importer.py  test_reporting.py
